force-app/main/default/objects/HIS_Recon__c/HIS_Recon__c.object-meta.xml
<CustomObject>
    <label>HIS Recon</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>HIS Recon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HIS Recons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>