force-app/main/default/objects/HIS_Recon__c/fields/Recon_Date__c.field-meta.xml
<CustomField>
    <fullName>Recon_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the Reconned Account was reconned</inlineHelpText>
    <label>Recon Date</label>
    <type>Date</type>
</CustomField>