force-app/main/default/objects/HIS_Recon__c/fields/Recon_Status__c.field-meta.xml
<CustomField>
    <fullName>Recon_Status__c</fullName>
    <inlineHelpText>Status = Green, a &quot;reader board&quot; exists.
Status = Blue, there is a placard or an informal reader board.
Status = Yellow, there may be some problems with getting the information.
Status = Red, information will not be gathered.</inlineHelpText>
    <label>Recon Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>