force-app/main/default/objects/HIS_Recon__c/fields/Requesting_Account__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account that is requesting to have properties reconned</inlineHelpText>
    <label>Requesting Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HIS Recons</relationshipLabel>
    <relationshipName>HIS_Recons</relationshipName>
    <type>Lookup</type>
</CustomField>